# LoopLLM

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  transfer_solar.py
dataset/: all_data.json  build_all_data.py
scripts/: aggregate_results.sh  evaluation_transfer.sh  table1.sh  transfer_local.sh  transfer_solar.sh
src/: aggregate_results.py  build_all_data.py  ensemble.py  evaluate_raw_degeneration.py  evaluate_transfer.py  evaluate_transfer_degeneration.py  main.py  transfer_solar.py
src/utils/: __init__.py  opt_utils.py  string_utils.py
utils/: __init__.py  string_utils.py
