[project]
name = "loopllm"
version = "0.1.0"
description = "LoopLLM minimal uv env"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "accelerate==1.4.0",
    "compressed-tensors==0.15.0.1",
    "datasets==2.16.1",
    "numpy==2.2.3",
    "pandas==2.2.3",
    "sentence-transformers>=5.4.1",
    "torch==2.10.0",
    "torchmetrics>=1.9.0",
    "transformers==5.5.1",
    "vllm==0.19.1",
]

[tool.uv]
package = false
